<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Z-казино"
        android:textSize="32sp"
        android:textColor="@color/text_black"
        android:fontFamily="monospace"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Карточка авторизации -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:fontFamily="serif-monospace"
                android:layout_marginBottom="24dp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input"
                android:hint="@string/hint_email"
                android:paddingStart="16dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input"
                android:hint="@string/hint_password"
                android:paddingStart="16dp"
                android:inputType="textPassword"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:textSize="12sp"
                android:textColor="@color/text_black"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textSize="12sp"
                android:textColor="@color/text_black"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/btn_login"
                android:textColor="@color/text_black"
                android:backgroundTint="#E1BEE7"
                android:textAllCaps="false"
                android:fontFamily="serif-monospace"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>